--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "fr.geolabs.dev.mapmint4me"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 27
         versionCode 22
         versionName "1.0"
@@ -48,6 +48,11 @@ dependencies {
     implementation 'com.google.ar:core:1.8.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.8.0'
     implementation 'com.google.ar.sceneform:core:1.8.0'
+
+    implementation 'com.google.ar:core:1.0.0'
+    implementation 'javax.vecmath:vecmath:1.5.2'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
 
     implementation 'de.javagl:obj:0.2.1'
     implementation ('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
