--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,8 +91,10 @@
 
 
     <activity android:name=".ARPage"/>
-        <meta-data android:name="com.google.ar.core" android:value="required" />
+
     <activity android:name="com.hl3hl3.arcoremeasure.ArMeasureActivity"/>
+        <activity android:name="drawar.DrawAR"/>
+        <meta-data android:name="com.google.ar.core" android:value="required" />
     </application>
 
 </manifest>
